--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "next",
+    "name": "chain-reaction",
     "repository": {
         "type":"git",
         "url":"https://github.com/galkinrost/next.git"
